# MCCToolChestPE

./: .gitignore  License.txt  README.md
Modified/: MCCToolChestPE.exe.config
Modified/Src/: Directory.Build.props  MCCToolChestPE.sln  build-arm32.ps1
Modified/Src/FastColoredTextBox/: FastColoredTextBox.csproj
Modified/Src/Interop.PortableDeviceTypesLib/: Interop.PortableDeviceTypesLib.csproj
Modified/Src/MCCToolChestPE_exe/: CompilerSwitchMaps.cs  MCCToolChestPE.csproj  ObfuscatorResourceCache.cs  UXXDn3cvaSJiMtEimR.14FmER7TIdULJkLVey
Modified/Src/NAppUpdate.Framework/: NAppUpdate.Framework.Resources.resx
Modified/Src/NBTExplorerWrapper/: NBTExplorer.Windows.FindReplace.resx  NBTExplorerWrapper.Properties.Resources.resx  NBTExplorerWrapper.csproj
Modified/Src/leveldb-mojang-main/: .gitignore  build-leveldb-arm32.bat
Modified/support/: BlockID.json  blockStates.json
Original/Src/: MCCToolChestPE.sln  build-arm32.ps1  build-arm64.ps1  build-x64.ps1  build-x86.ps1  build.ps1
Original/Src/ClearScript/: ClearScript.csproj
Original/Src/Interop.PortableDeviceApiLib/: Interop.PortableDeviceApiLib.csproj
Original/Src/MCCToolChestPE_exe/: -Module--5E98822F-2336-482E-B0C4-FF71E6E6B913-.cs  56VNfxQrwOeY2geE3i.76YChJEysnAtodwYU0  Extensions.cs  ListViewColumnSorter.cs  MCCToolChestPE.csproj
Original/Src/NAppUpdate.Framework/: NAppUpdate.Framework.csproj
Original/Src/NBTExplorerWrapper/: NBTExplorer.Windows.About.resx  NBTExplorer.Windows.MainForm.resx  NBTExplorerWrapper.csproj
Original/Src/leveldb-mojang-main/mcpe-dll/: CMakeLists.txt
(+1724 files in other folders)
